# GEPA-DSPy-circuit-trace-of-Reasoning-and-Coding

./: AGENTS.md  README.md
reasoning-generalization-tracer/: .gitignore  README.md  pyproject.toml
reasoning-generalization-tracer/.github/scripts/: concept_smoke.py  extract_run_dir.py  validate_metrics.py
reasoning-generalization-tracer/.github/workflows/: ci.yml
reasoning-generalization-tracer/datasets/: README.md
reasoning-generalization-tracer/docs/: 17_case_framework.md  dapo_hybrid.md  epistemic_alignment.md  schema_v3.md
reasoning-generalization-tracer/examples/: dapo_hybrid_minimal.py
reasoning-generalization-tracer/notebooks/: 01_quickstart.ipynb  02_circuit_trace_demo.ipynb  03_generalization_eval.ipynb  04_humanities_bayes_demo.ipynb  05_attribution_grokking.ipynb
reasoning-generalization-tracer/scripts/: run_grokking_matrix.py  train_dapo_hybrid.py
reasoning-generalization-tracer/src/rg_tracer/: __init__.py  (+1 more)
reasoning-generalization-tracer/tests/: __init__.py  conftest.py  gepa_test_stubs.py  test_abstention_policy.py  test_academic_pipeline_utils.py  test_aggregator.py  test_attribution_integration.py  test_attribution_metrics.py  test_axes.py  test_circuit_adapter.py  test_concept_reward.py  test_factuality_certification.py  test_fallback_bayes.py  test_feedback_adapter.py  test_grn_value_decomp_overwatch.py  test_humanities_aggregator.py  test_humanities_axes.py  test_logging_jsonl.py  test_reward_scheme.py  test_schema_v3.py  test_self_play.py  test_semantics.py  test_thought_alignment.py  test_trainer_step_smoke.py  test_trm_baseline.py
(+104 files in other folders)
